--- a/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Properties/launchSettings.json
+++ b/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/Properties/launchSettings.json
@@ -14,7 +14,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Syncfusion.Server.EmbedBoldBI": {
+    "BoldBI.Embedded.Sample": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5000",
