User details updated

--- a/Scenario Based Samples/Quick Bold BI Embedded ASP.NET Core sample/BoldBI.Embedded.Sample/appsettings.json
+++ b/Scenario Based Samples/Quick Bold BI Embedded ASP.NET Core sample/BoldBI.Embedded.Sample/appsettings.json
@@ -1,10 +1,10 @@
 {
   "AppSettings": {
-    "ServerURL": "https://localhost/bi",
-    "UserEmail": "demo@example.com",
-    "EmbedSecret": "xxxxxxxxxxxxxxxx",
+    "ServerURL": "https://demo.boldbi.com/bi",
+    "UserEmail": "readonly@boldbi.com",
+    "EmbedSecret": "LDRaPEudeBfhCf0U308o5vl6ybTEmWCz",
     "Environment": "Cloud",
-    "RootURL": "https://localhost/bi",
+    "RootURL": "https://demo.boldbi.com/bi",
     "SiteIdentifier": ""
   },
   "Logging": {
