--- a/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/App_Data/embedConfig.json
+++ b/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/App_Data/embedConfig.json
@@ -1,9 +1,9 @@
 {
-  "DashboardId": "fea37da1-014e-4aa0-a42f-be2a37a00f6d",
-  "ServerUrl": "http://localhost:53150/bi",
-  "UserEmail": "nithya.gopal@syncfusion.com",
-  "EmbedSecret": "NGPuFNielnfiJtcaWmc35YgGWC2agdsn",
-  "EmbedType":  "Component",
-  "Environment": "Enterprise",
-  "SiteIdentifier": "site/site1"
+  "DashboardId": "",
+  "ServerUrl": "",
+  "UserEmail": "",
+  "EmbedSecret": "",
+  "EmbedType":  "",
+  "Environment": "",
+  "SiteIdentifier": ""
 }
