UMP-23843-Migrate-to-ASPNET-Core-2.1-Projects-to-ASPDOTNET-6

--- a/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/App_Data/embedConfig.json
+++ b/SDK Samples/C#/ASP.NET Core/BoldBI.Embedded.Sample/App_Data/embedConfig.json
@@ -3,7 +3,8 @@
   "ServerUrl": "",
   "UserEmail": "",
   "EmbedSecret": "",
-  "EmbedType":  "",
+  "EmbedType": "",
   "Environment": "",
+  "ExpirationTime": "",
   "SiteIdentifier": ""
 }
