--- a/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/IframeFullServer.csproj
+++ b/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/IframeFullServer.csproj
@@ -2,8 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
+  </ItemGroup>
 
 </Project>
