--- a/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/IframeFullServer.csproj
+++ b/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/IframeFullServer.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.31.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
   </ItemGroup>
 
