--- a/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/appsettings.json
+++ b/Scenario Based Samples/Iframe Full Server Embedding/IframeFullServer/appsettings.json
@@ -1,8 +1,7 @@
 {
   "jwt:signingkey": "os82yjaluY67SwWpkZs5suz0sEeHMdhmHZHsOgasbV3vh8QCCWCe0w==",
-  "user:userid": "b6d2230f-8481-465e-aa9f-bfe8578c220e",
-  "jwt:ourserverurl": "http://localhost:58295/",  
-  "ExpirationTimeInMinutes": "120",  
+  "jwt:boldbiserverurl": "http://localhost:58295/",  
+  "ExpirationTimeInMinutes": "2",  
   
   "Logging": {
     "LogLevel": {
