resolved sign-in issue

--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-api/appsettings.json
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-api/appsettings.json
@@ -9,15 +9,15 @@
     "secret": "1234567890123456789",
     "issuer": "https://boldapi.com",
     "audience": "https://boldapi.com",
-    "accessTokenExpiration": 20,
+    "accessTokenExpiration": 120,
     "refreshTokenExpiration": 60
   },
   "BoldBI": {
-    "rootURL": "",
-    "siteidentifier": "",
-    "environment": "",
-    "useremail": "",
-    "embedsecret": ""
+    "rootURL": "https://onpremise-demo.boldbi.com/bi",
+    "siteidentifier": "site/site2",
+    "environment": "on-premise",
+    "useremail": "demo@boldbi.com",
+    "embedsecret": "pUu8DKaujKIyXdYAPWgvj1jW2OsCXuq"
   },
   "AllowedHosts": "*"
 }
