removed exposed data

--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-api/appsettings.json
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-api/appsettings.json
@@ -13,11 +13,11 @@
     "refreshTokenExpiration": 60
   },
   "BoldBI": {
-    "rootURL": "https://onpremise-demo.boldbi.com/bi",
-    "siteidentifier": "site/site2",
+    "rootURL": "https://boldbi.com",
+    "siteidentifier": "site/value",
     "environment": "on-premise",
-    "useremail": "demo@boldbi.com",
-    "embedsecret": "pUu8DKaujKIyXdYAPWgvj1jW2OsCXuq"
+    "useremail": "demo@gmail.com",
+    "embedsecret": "12345678987654321"
   },
   "AllowedHosts": "*"
 }
