Removed unwanted files and revamped code updated readme file

--- a/Scenario Based Samples/Iframe Based Dashboard Listing/IframeSolutionSample/appsettings.json
+++ b/Scenario Based Samples/Iframe Based Dashboard Listing/IframeSolutionSample/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "EmbedProperties": {
-    "UserEmail": "anuabarna.b@syncfusion.com",
-    "EmbedSecret": "FSVL4bZ5GOYT4psD1kTzE3RShk6Wka0h",
-    "RootURL": "http://localhost:62347/bi",
-    "Environment": "onpremise",
+    "UserEmail": "admin@domain.com",
+    "EmbedSecret": "YT4psD4hb1kTzE3RSty56fcjhk6Wka0h",
+    "RootURL": "http://localhost:12345/bi",
     "SiteIdentifier": "site/site1",
+    "Environment": "onpremise",
     "CategoryName": "Sales"
   },
   "AllowedHosts": "*"
