--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-api/appsettings.json
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-api/appsettings.json
@@ -19,5 +19,8 @@
     "useremail": "demo@gmail.com",
     "embedsecret": "12345678987654321"
   },
+  "ConnectionStrings": {
+    "DefaultConnection":  "Host=bold-bi-samples-do-user-7767154-0.b.db.ondigitalocean.com;Port=25060;username=boldbi_embed_readonly;database=custom_attribute_sample_users;password=Uh6K@Jc@v8q4RyGdV7*Mt9;"
+  },
   "AllowedHosts": "*"
 }
