--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-api/boldbi.web.api.csproj
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-api/boldbi.web.api.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
