--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/package.json
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/package.json
@@ -13,13 +13,15 @@
     "@angular/animations": "^16.2.0",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
+    "@angular/core": "^16.2.12",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@boldbi/boldbi-embedded-sdk": "^6.17.13",
+    "@syncfusion/ej2-angular-dropdowns": "^28.1.33",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -27,7 +29,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.4",
-    "@angular/cli": "^16.2.4",
+    "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
