--- a/Scenario Based Samples/AnonymousUser-Final/yaml files/backend/hpa.yaml
+++ b/Scenario Based Samples/AnonymousUser-Final/yaml files/backend/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: embedded-anonymousbackend-hpa
-  namespace: anonymoususer-rls-backend
+  namespace: anonymoususer-rls
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
