--- a/Scenario Based Samples/AnonymousUser-Final/yaml files/backend/service.yaml
+++ b/Scenario Based Samples/AnonymousUser-Final/yaml files/backend/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: embedded-anonymousbackend-service
-  namespace: anonymoususer-rls-backend
+  namespace: anonymoususer-rls
   labels:
     app: embedded-anonymous-backend
 spec:
