--- a/Scenario Based Samples/AnonymousUser-Final/yaml files/frontend/ingress.yaml
+++ b/Scenario Based Samples/AnonymousUser-Final/yaml files/frontend/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: anonymousfrontend-samples
-  namespace: anonymoususer-rls-frontend
+  namespace: anonymoususer-rls
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: "true"
