--- a/Scenario Based Samples/AnonymousUser-Final/yaml files/frontend/service.yaml
+++ b/Scenario Based Samples/AnonymousUser-Final/yaml files/frontend/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: embedded-anonymousfrontend-service
-  namespace: anonymoususer-rls-frontend
+  namespace: anonymoususer-rls
   labels:
     app: embedded-anonymous-frontend
 spec:
