--- a/Scenario Based Samples/Anonymoususer-UXUI/web-client/Dockerfile
+++ b/Scenario Based Samples/Anonymoususer-UXUI/web-client/Dockerfile
@@ -1,3 +1,4 @@
+
 FROM node:18-alpine AS builder
 
 WORKDIR /app
@@ -17,12 +18,15 @@ RUN ng build --configuration=production --base-href="/row-level-security/"
 
 FROM nginx:alpine
 
+#Copy a custom NGINX config (to handle /embed routing)
+COPY nginx.conf /etc/nginx/nginx.conf
+
 # Copy built Angular app to nginx html folder
-COPY --from=builder /app/dist/boldbi.web.client /usr/share/nginx/html
+#COPY --from=builder /app/dist/boldbi.web.client /usr/share/nginx/html/row-level-security
+COPY --from=builder /app/dist/boldbi.web.client /var/www/html/row-level-security
 
 # Expose ports
 EXPOSE 80
-EXPOSE 8080
 EXPOSE 443
 
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
