updated nginx file based on developer sample browser

--- a/Scenario Based Samples/Anonymoususer-UXUI/web-client/nginx.conf
+++ b/Scenario Based Samples/Anonymoususer-UXUI/web-client/nginx.conf
@@ -1,6 +1,4 @@
-# /etc/nginx/nginx.conf
 events { 
-    # You can leave this block empty or specify worker connections
     worker_connections 1024; 
 }
 
@@ -8,19 +6,20 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # Set the server configuration inside the 'http' block
     server {
         listen 80;
-        server_name _;  # Respond to any IP or domain
+        server_name _;
 
-        root /var/www/html;  # Path to your Angular app inside the container
+        root /var/www/html;
         index index.html;
 
         location /row-level-security/ {
-            try_files $uri $uri/ /index.html;
+            root /var/www/html;
+            index index.html;
+            try_files $uri $uri/ /row-level-security/index.html;
         }
 
-        error_page 404 /index.html;
+        error_page 404 /row-level-security/index.html;
 
         location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|otf|json|xml)$ {
             expires 6M;
@@ -31,5 +30,9 @@ http {
         location ~ /\.ht {
             deny all;
         }
+
+        gzip on;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_vary on;
     }
 }
